<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#f5f5f5"
    android:paddingHorizontal="30dp"
    android:paddingVertical="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="10000dp"
            android:layout_height="4700dp"
            android:background="@drawable/ty"
            android:contentDescription="@string/todobg" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/kk"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-35dp"
            android:text="@string/denison_ilham_nasywa_hidayat"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/alamat_e_mail"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:text="@string/denilham_student_uns_ac_id"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/prodi"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:text="@string/d3_teknik_informatika"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/alamat"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:text="@string/sukoharjo_jawatengah_indonesia"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tempat_lahir"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:text="@string/sukoharjo"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tanggal_lahir"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:text="@string/_14_januari_2003"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>